--- a/index.html
+++ b/index.html
@@ -31,46 +31,48 @@
 <p>This Services does not uses these “cookies” explicitly. However, the app may use third party code
     and libraries that use “cookies” to collection information and to improve their services.</p>
 
-<p><strong>Service Providers</strong></p> <!-- This part need seem like it's not needed, but if you use any Google services, or any other third party libraries, chances are, you need this. -->
-<p>[I|We] may employ third-party companies and individuals due to the following reasons:</p>
+<p><strong>Service Providers</strong></p>
+	<p>Google</p> 
+<p>I may employ third-party companies and individuals due to the following reasons:</p>
 <ul>
     <li>To facilitate our Service;</li>
     <li>To provide the Service on our behalf;</li>
     <li>To perform Service-related services; or</li>
     <li>To assist us in analyzing how our Service is used.</li>
 </ul>
-<p>[I|We] want to inform users of this Service that these third parties have access to your Personal
+<p>I want to inform users of this Service that these third parties have access to your Personal
     Information. The reason is to perform the tasks assigned to them on our behalf. However, they
     are obligated not to disclose or use the information for any other purpose.</p>
 
 <p><strong>Security</strong></p>
-<p>[I|We] value your trust in providing us your Personal Information, thus we are striving to use
+<p>I value your trust in providing us your Personal Information, thus we are striving to use
     commercially acceptable means of protecting it. But remember that no method of transmission over
-    the internet, or method of electronic storage is 100% secure and reliable, and [I|we] cannot
+    the internet, or method of electronic storage is 100% secure and reliable, and I cannot
     guarantee its absolute security.</p>
 
 <p><strong>Links to Other Sites</strong></p>
 <p>This Service may contain links to other sites. If you click on a third-party link, you will be
-    directed to that site. Note that these external sites are not operated by [me|us]. Therefore, I
+    directed to that site. Note that these external sites are not operated by me. Therefore, I
     strongly advise you to review the Privacy Policy of these websites. I have no control over, and
     assume no responsibility for the content, privacy policies, or practices of any third-party
     sites or services.</p>
 
 <p><strong>Children’s Privacy</strong></p>
-<p>This Services do not address anyone under the age of 13. [I|We] do not knowingly collect personal
-    identifiable information from children under 13. In the case [I|we] discover that a child under 13
-    has provided [me|us] with personal information, [I|we] immediately delete this from our servers. If you
+<p>This Services do not address anyone under the age of 13. I do not knowingly collect personal
+    identifiable information from children under 13. In the case I discover that a child under 13
+    has provided me with personal information, I immediately delete this from our servers. If you
     are a parent or guardian and you are aware that your child has provided us with personal
-    information, please contact [me|us] so that [I|we] will be able to do necessary actions.</p>
+    information, please contact me so that I will be able to do necessary actions.</p>
 
 <p><strong>Changes to This Privacy Policy</strong></p>
-<p>[I|We] may update our Privacy Policy from time to time. Thus, you are advised to review this page
-    periodically for any changes. [I|We] will notify you of any changes by posting the new Privacy Policy
+<p>I may update our Privacy Policy from time to time. Thus, you are advised to review this page
+    periodically for any changes. I will notify you of any changes by posting the new Privacy Policy
     on this page. These changes are effective immediately, after they are posted on this page.</p>
 
 <p><strong>Contact Us</strong></p>
-<p>If you have any questions or suggestions about [my|our] Privacy Policy, do not hesitate to contact
-    [me|us].</p>
+<p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
+    me.</p>
+	<p><a href="mailto:wegielek.art@gmail.com"></p>
 <p>This Privacy Policy page was created at <a href="https://privacypolicytemplate.net"
                                               target="_blank">privacypolicytemplate.net</a>.</p>
 </body>
