--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <p><strong>Information Collection and Use</strong></p>
 <p>For a better experience while using our Service, I may require you to provide us with certain
-    personally identifiable information, including but not limited to [add whatever else you collect here, e.g. users name | address | location | pictures]. 
+    personally identifiable information, including but not limited to voice recordings.
 	The information that I request is retained on your device and is not
     collected by me in any way</p>
 <p>The app does use third party services that may collect information used to identify you.
