--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <p><strong>Contact Us</strong></p>
 <p>If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact
     me.</p>
-	<p><a href="mailto:wegielek.art@gmail.com"></p>
+	<p><a href="mailto:wegielek.art@gmail.com">wegielek.art@gmail.com</a></p>
 <p>This Privacy Policy page was created at <a href="https://privacypolicytemplate.net"
                                               target="_blank">privacypolicytemplate.net</a>.</p>
 </body>
